--- a/jira/5.md
+++ b/jira/5.md
@@ -78,7 +78,7 @@ As a user, I want consistent and accessible UI elements (texts, titles, inputs, 
 ## Definition of Done
 
 - [ ] Components `Text`, `Heading`, `Input`, `Button`, `Link`, `Image` created in `src/presentation/components/ui/`
-- [ ] Centralized accessibility utilities added to `src/shared/a11y/ids.ts` and `src/shared/a11y/utils.ts`
+- [x] Centralized accessibility utilities added to `src/shared/a11y/ids.ts` and `src/shared/a11y/utils.ts`
 - [ ] SCSS for components created in `src/styles/components/` and use only `src/styles/variables/*` tokens
 - [ ] No inline styles or hardcoded values present
 - [ ] Components are memoized appropriately and avoid unnecessary re-renders
