feat(presentation/ui): add base Text, Heading, Button, Input, Link, Image components with tokens-only SCSS and tests feat(shared/a11y): ids/utils baseline for a11y ids and form field ids chore(styles): extend color/spacing/typography tokens for buttons, inputs, focus and headings fix(presentation/input): make aria-describedby error-exclusive and clean unused util docs(.cursor): enforce planning naming/header and sub-ticket template docs(jira): update DoD for variables and a11y utilities

--- a/jira/5.md
+++ b/jira/5.md
@@ -79,6 +79,7 @@ As a user, I want consistent and accessible UI elements (texts, titles, inputs, 
 
 - [ ] Components `Text`, `Heading`, `Input`, `Button`, `Link`, `Image` created in `src/presentation/components/ui/`
 - [x] Centralized accessibility utilities added to `src/shared/a11y/ids.ts` and `src/shared/a11y/utils.ts`
+- [x] SCSS variables audited and minimally extended in `src/styles/variables/*` to cover components (links, buttons, inputs, focus states, heading sizes)
 - [ ] SCSS for components created in `src/styles/components/` and use only `src/styles/variables/*` tokens
 - [ ] No inline styles or hardcoded values present
 - [ ] Components are memoized appropriately and avoid unnecessary re-renders
