feat(addActivity): implement cascading product selects (Type → Model → Coloris)
- Replace single product select with three cascading Select components
- Add cascading reset logic (type change clears model/coloris, model change clears coloris)
- Implement auto-selection of coloris when only one available
- Add product identification logic (find productId from modelId + colorisId)
- Update form validation for three-field product selection
- Add shared formatProductType utility function
- Update unit tests with comprehensive coverage (47 tests, all passing)
- Follow ProductForm patterns for consistency

Implements Sub-Tickets 27.1 and 27.2 (FBC-27)

--- a/jira/26.md
+++ b/jira/26.md
@@ -13,33 +13,46 @@ Ticket Number: 26
 
 ## Description
 
-Replace the single "Product" select dropdown in the add activity form with three cascading dropdowns to improve user experience and make product selection more intuitive. The new flow will be: Product Type → Product Model/Name → Coloris. If only one coloris is available for the selected model, it should be automatically selected.
+Replace the single "Product" select dropdown in the add activity form with three cascading dropdowns to improve user experience and make product selection more intuitive. The new flow will be: Product Type → Product Model → Coloris. If only one coloris is available for the selected model, it should be automatically selected.
 
 **Current state:**
+
 -   Add activity form has a single "Product" select that displays all products: `"Charlie - Rose pâle à motifs (POCHETTE_VOLANTS)"`
 -   Product selection is difficult when there are many products with similar names
 -   No filtering or grouping by product type or model
+-   Users must scroll through a long list to find the right product
 
 **Business requirement:**
--   Users need to select products more easily by first choosing the product type
--   Then selecting the model/name (filtered by type)
--   Finally selecting the coloris (filtered by type + name)
--   If only one coloris is available, it should be auto-selected for better UX
--   Each product is uniquely identified by the combination: type + name + coloris
 
-**Product data structure:**
--   `name`: Model name only (e.g., "Charlie", "Assumée", "Espiègle")
--   `type`: Product type (e.g., POCHETTE_VOLANTS, SAC_BANANE, TROUSSE_TOILETTE)
--   `coloris`: Color variation (e.g., "Rose pâle à motifs", "Rose marsala", "Prune")
--   Each combination (type + name + coloris) is a unique product with its own `id` and `stock`
+-   Users need to select products more easily by first choosing the product type
+-   Then selecting the model (filtered by type)
+-   Finally selecting the coloris (filtered by model)
+-   If only one coloris is available, it should be auto-selected for better UX
+-   Each product is uniquely identified by the combination: `modelId` + `colorisId`
+
+**Infrastructure already available:**
+
+✅ **FBC-26 (Product Reference Tables) has already been implemented**, providing:
+
+-   Reference tables (`product_models`, `product_coloris`) with proper foreign keys
+-   Repository methods: `listModelsByType`, `listColorisByModel`
+-   Usecases: `listProductModelsByType`, `listProductColorisByModel`
+-   React Query hooks: `useProductModelsByType`, `useProductColorisByModel`
+
+**This ticket (FBC-26) focuses on:**
+
+-   Explaining the UX improvement and business value
+-   Documenting the user story and acceptance criteria
+-   Providing context for ticket #27 (implementation)
 
 **Example flow:**
+
 1.  User selects Type: "POCHETTE_VOLANTS"
-2.  System shows only models for this type: "Charlie"
-3.  User selects Model: "Charlie"
-4.  System shows only coloris for this type + model: "Rose pâle à motifs", "Rose marsala"
+2.  System fetches models for this type using `useProductModelsByType` hook → Shows: "Charlie"
+3.  User selects Model: "Charlie" (modelId)
+4.  System fetches coloris for this model using `useProductColorisByModel` hook → Shows: "Rose pâle à motifs", "Rose marsala"
 5.  If only one coloris exists, it's auto-selected
-6.  Final selection: Product with `id` matching (type=POCHETTE_VOLANTS, name=Charlie, coloris=selected)
+6.  Final selection: System finds `productId` by matching `modelId` + `colorisId` in products table
 
 ## User Story
 
@@ -47,42 +60,47 @@ Replace the single "Product" select dropdown in the add activity form with three
 **I want** to select products using cascading dropdowns (Type → Model → Coloris)  
 **So that** I can quickly find and select the exact product I need without scrolling through a long list
 
-## Acceptance Criteria
+## Implementation
 
-See individual sub-tickets for detailed acceptance criteria:
+**Ticket #27** implements the UI changes for this feature:
 
--   **Ticket #27**: Core layer filtering usecases
--   **Ticket #28**: Infrastructure layer repository methods (optional optimization)
--   **Ticket #29**: UI layer cascading selects implementation
+-   Updates `AddActivityForm` component with three cascading Select dropdowns
+-   Uses existing hooks from FBC-26: `useProductModelsByType`, `useProductColorisByModel`
+-   Implements cascading filter logic (type → model → coloris)
+-   Maps final selection to `productId` for form submission
 
-## Sub-Tickets
+**Why ticket #27 is needed:**
 
-**⚠️ This ticket has been split into smaller, more digestible tickets following Clean Architecture layers:**
-
--   **Ticket #27**: Add product filtering usecases (Core layer - Usecases)
--   **Ticket #28**: Add product filtering repository methods (Infrastructure layer - Optional optimization)
--   **Ticket #29**: Update AddActivityForm with cascading product selects (UI layer)
-
-Please refer to the individual tickets for implementation details.
+The infrastructure (hooks, usecases, repository methods) already exists from FBC-26 (Product Reference Tables), but the `AddActivityForm` component still uses the old single-select approach. Ticket #27 updates the UI to leverage the existing infrastructure and provide the improved UX described in this ticket.
 
 ## Related Components
 
-See individual sub-tickets for related components:
+**Already implemented (FBC-26):**
 
--   **Ticket #27**: `src/core/usecases/product.ts`
--   **Ticket #28**: `src/core/ports/productRepository.ts`, `src/infrastructure/supabase/productRepositorySupabase.ts`
--   **Ticket #29**: `src/presentation/components/addActivity/AddActivityForm/AddActivityForm.tsx`
+-   ✅ `src/core/usecases/product.ts` - Contains `listProductModelsByType`, `listProductColorisByModel`
+-   ✅ `src/core/ports/productRepository.ts` - Contains `listModelsByType`, `listColorisByModel`
+-   ✅ `src/infrastructure/supabase/productRepositorySupabase.ts` - Implements repository methods
+-   ✅ `src/presentation/hooks/useProducts.ts` - Contains `useProductModelsByType`, `useProductColorisByModel`
+
+**To be implemented (Ticket #27):**
+
+-   `src/presentation/components/addActivity/AddActivityForm/AddActivityForm.tsx` - Update with cascading selects
 
 ## Dependencies
 
+-   ✅ **FBC-26 (Product Reference Tables)** - **MUST be completed first** (already implemented)
+    -   Provides reference tables (`product_models`, `product_coloris`)
+    -   Provides hooks and usecases for fetching models and coloris
 -   Ticket #14 (Add Activity page) - Must be completed first
--   Products must exist in database with correct structure (name, type, coloris)
+-   Products must exist in database with `model_id` and `coloris_id` foreign keys (from FBC-26)
 
 ## Notes
 
+-   **This ticket documents the UX improvement and business value**
+-   **Ticket #27 implements the UI changes** using the existing infrastructure from FBC-26
 -   This is a UX improvement that makes product selection more intuitive
 -   The current single-select approach works but becomes cumbersome with many products
 -   Cascading dropdowns are a common pattern for hierarchical data selection
 -   Auto-selection of unique coloris improves UX by reducing clicks
--   Stock management remains unchanged - each product (type + name + coloris) has its own stock
-
+-   Stock management remains unchanged - each product (`modelId` + `colorisId`) has its own stock
+-   **No backend work needed** - All infrastructure already exists from FBC-26
