--- a/jira/27.md
+++ b/jira/27.md
@@ -4,96 +4,98 @@ Ticket Number: 27
 Parent Ticket: 26
 ---
 
-# Add product filtering usecases (Core layer)
+# Update AddActivityForm with cascading product selects (UI layer)
 
 -   Type: Feature
 -   Priority: Medium
--   Story Points: 2
--   Labels: core, usecases, products, filtering
--   Git Branch: feat/fbc-27-product-filtering-usecases
+-   Story Points: 5
+-   Labels: ui, forms, products, activity, components
+-   Git Branch: feat/fbc-27-cascading-product-selects-ui
 
 ## Description
 
-Add usecases for filtering products by type, model name, and coloris. These usecases will provide the business logic needed to support cascading product selection in the add activity form.
+Implement cascading product selection in **AddActivityForm** component (formulaire "Ajouter une activité") using the infrastructure from FBC-26 (Product Reference Tables). Replace the single "Product" select with three cascading selects: Product Type → Product Model → Coloris.
 
-**Current state:**
--   `listProducts` usecase exists and returns all products
--   No filtering usecases exist
--   Filtering would need to be done in presentation layer
+**Note:** ProductForm (formulaire "Ajouter un produit") already has cascading dropdowns implemented. This ticket brings the same UX to AddActivityForm.
 
-**Business requirement:**
--   Need to filter products by type to populate Product Type dropdown
--   Need to extract unique model names (name field) for a given type
--   Need to extract unique coloris for a given type + model combination
--   Filtering should be done at usecase level to maintain Clean Architecture
+**See ticket #26 for business context and user story.**
 
-## User Story
-
-**As a** developer  
-**I want** product filtering logic in usecases  
-**So that** filtering is centralized and reusable across the application
+**This ticket implements the UI layer only** - all backend infrastructure (hooks, usecases, repository methods) already exists from FBC-26.
 
 ## Acceptance Criteria
 
--   [ ] Add `listProductsByType` usecase in `src/core/usecases/product.ts`
-    -   Takes `ProductRepository` and `ProductType` as parameters
-    -   Returns `Promise<Product[]>` with products matching the type
-    -   Returns empty array if no products match
-    -   Throws error if repository retrieval fails
--   [ ] Add `listProductModelsByType` usecase in `src/core/usecases/product.ts`
-    -   Takes `ProductRepository` and `ProductType` as parameters
-    -   Returns `Promise<string[]>` with unique model names (name field) for the type
-    -   Returns empty array if no products match
-    -   Throws error if repository retrieval fails
--   [ ] Add `listColorisByTypeAndModel` usecase in `src/core/usecases/product.ts`
-    -   Takes `ProductRepository`, `ProductType`, and `name: string` as parameters
-    -   Returns `Promise<string[]>` with unique coloris for the type + model combination
-    -   Returns empty array if no products match
-    -   Throws error if repository retrieval fails
--   [ ] All usecases use existing `repository.list()` method and filter in-memory
--   [ ] All usecases are properly documented with JSDoc
--   [ ] All usecases have proper TypeScript types
+-   [ ] Replace single "Product" select with three selects: Product Type, Product Model, Coloris
+-   [ ] Product Type select shows all available product types from `ProductType` enum (POCHETTE_VOLANTS, SAC_BANANE, etc.)
+-   [ ] Product Model select uses `useProductModelsByType` hook (from FBC-26)
+    -   Shows models for the selected type (fetched from `product_models` table)
+    -   Disabled when no type is selected
+    -   Reset when type changes
+    -   Shows loading state while fetching
+-   [ ] Coloris select uses `useProductColorisByModel` hook (from FBC-26)
+    -   Shows coloris for the selected model (fetched from `product_coloris` table)
+    -   Disabled when no type or model is selected
+    -   Reset when type or model changes
+    -   Shows loading state while fetching
+-   [ ] Auto-select coloris if only one is available for the selected model
+-   [ ] Final product selection correctly maps to `productId` by finding product with matching `modelId` + `colorisId`
+    -   Query `products` table to find product where `model_id = selectedModelId` AND `coloris_id = selectedColorisId`
+-   [ ] Form validation ensures all three fields are selected when product is required
+-   [ ] All three selects are properly labeled and accessible (WCAG 2.1 AA)
+-   [ ] Form maintains existing functionality for activity creation
+-   [ ] Component uses SCSS variables for all styling (no hardcoded values)
+-   [ ] Component is memoized appropriately
+-   [ ] Component has proper TypeScript types
 
-## Technical Considerations
+## Technical Implementation
 
-**Clean Architecture:**
--   Usecases layer (`core/usecases/`)
--   Uses existing `ProductRepository` port (no changes needed)
--   Filters products in-memory using existing `list()` method
--   Returns domain types only
+**Key points:**
 
-**Implementation approach:**
--   Use existing `listProducts` usecase internally, or call `repository.list()` directly
--   Filter products in-memory using Array methods (`.filter()`, `.map()`, `.reduce()`)
--   Extract unique values using `Set` or `Array.from(new Set(...))`
+-   Use existing hooks: `useProductModelsByType(type)`, `useProductColorisByModel(modelId)`
+-   Use `useProducts()` hook to find `productId` from `modelId` + `colorisId` combination
+-   Implement cascading reset: type change → clear model/coloris, model change → clear coloris
+-   Auto-select coloris if only one available
+-   Show loading states while fetching
 
-**Performance:**
--   In-memory filtering is acceptable for small to medium product catalogs
--   For large catalogs, consider adding repository-level filtering in future tickets
+**Implementation pattern:**
+
+```typescript
+// State
+const [selectedProductType, setSelectedProductType] = useState<ProductType | null>(null);
+const [selectedModelId, setSelectedModelId] = useState<ProductModelId | null>(null);
+const [selectedColorisId, setSelectedColorisId] = useState<ProductColorisId | null>(null);
+
+// Fetch data using FBC-26 hooks
+const { data: models } = useProductModelsByType(selectedProductType);
+const { data: coloris } = useProductColorisByModel(selectedModelId);
+const { data: products } = useProducts();
+
+// Find productId from modelId + colorisId
+const productId = useMemo(() => {
+    if (!selectedModelId || !selectedColorisId || !products) return undefined;
+    return products.find((p) => p.modelId === selectedModelId && p.colorisId === selectedColorisId)?.id;
+}, [products, selectedModelId, selectedColorisId]);
+```
 
 ## Definition of Done
 
--   [ ] All three usecases implemented in `src/core/usecases/product.ts`
--   [ ] Usecases properly typed with TypeScript
--   [ ] Usecases documented with JSDoc
--   [ ] Usecases tested (unit tests in `__tests__/core/usecases/product.test.ts`)
--   [ ] Lint/build passes
--   [ ] No business logic in presentation layer
+-   [ ] All acceptance criteria met
+-   [ ] Component tested and lint/build passes
+-   [ ] Component documented with JSDoc
 
 ## Related Components
 
--   `src/core/usecases/product.ts` - File to update
--   `src/core/ports/productRepository.ts` - Uses existing interface
--   `__tests__/core/usecases/product.test.ts` - Tests to add
+-   `src/presentation/components/addActivity/AddActivityForm/AddActivityForm.tsx` - **Component to update** (formulaire "Ajouter une activité")
+-   `src/presentation/components/catalog/ProductForm/ProductForm.tsx` - **Reference implementation** (déjà implémenté avec cascading dropdowns)
+-   `src/presentation/hooks/useProducts.ts` - Use existing hooks: `useProductModelsByType`, `useProductColorisByModel`
 
 ## Dependencies
 
--   None (uses existing ProductRepository)
+-   ✅ **Ticket #26 (FBC-26)**: Product reference tables - **Already implemented** (provides all hooks and infrastructure)
+-   Ticket #14 (Add Activity page) - Must be completed first
 
 ## Notes
 
--   This ticket focuses on core business logic only
--   No UI changes in this ticket
--   Filtering is done in-memory for simplicity
--   Can be optimized later with repository-level filtering if needed
-
+-   **See ticket #26 for business context and user story**
+-   All backend infrastructure already exists from FBC-26 (hooks, usecases, repository methods)
+-   This ticket only implements the UI layer in AddActivityForm component
+-   Use `useProducts()` hook to find `productId` from `modelId` + `colorisId` (filter in-memory)
