feat(validation): implement Zod validation for Activity and Product forms
- Add Zod schemas for Activity and Product form inputs (FBC-17)
- Integrate Zod validation into AddActivityForm and ProductForm
- Replace manual validation with type-safe Zod schemas
- Add error mapping utility for i18n error messages
- Add comprehensive unit tests for validation schemas

Bug fixes:
- Fix weight field validation to reject strings like '150abc' using strict regex
- Fix productId error handling when selection is complete but other fields have errors
- Ensure all validation errors are properly displayed to users

Tests: 876 tests passing, 100% coverage for productSchema, 90% for activitySchema

--- a/jira/25.md
+++ b/jira/25.md
@@ -1,5 +1,6 @@
 ---
 Generated: 2025-01-27 14:30:22
+Main Ticker: 22
 Ticket Number: 25
 ---
 
@@ -16,12 +17,14 @@ Ticket Number: 25
 Build the complete catalog page UI that allows users to visualize their product list, add new products, and update existing products. The catalog page should follow the same patterns as the Activities page, providing a consistent user experience across the dashboard.
 
 **Current state:**
+
 -   Catalog page exists at `/dashboard/catalog` but is just a placeholder
 -   `useProducts` hook exists for listing products
 -   `useCreateProduct` and `useUpdateProduct` mutation hooks exist (from ticket #24)
 -   No UI components for product management yet
 
 **Business requirement:**
+
 -   Users need to view all products in a table format
 -   Users need to add new products to the catalog
 -   Users need to edit existing product information (name, type, coloris, pricing, stock, weight)
@@ -130,11 +133,13 @@ As a user, I want to view, add, and update products in the catalog so that I can
 Follow the same patterns as Activities page:
 
 -   **CatalogPage** (`/dashboard/catalog`):
+
     -   Header with title and "Add Product" button
     -   ProductsTable component
     -   Loading and error states
 
 -   **NewProductPage** (`/dashboard/catalog/new`):
+
     -   ProductForm component (create mode)
     -   Form submission via useCreateProduct mutation
     -   Success redirect to catalog page
@@ -240,4 +245,3 @@ Follow the same patterns as Activities page:
 -   Follow the same patterns as Activities page for consistency
 -   All form fields should be properly labeled and accessible
 -   Consider adding loading skeletons for better UX (optional enhancement)
-
