refactor(navigation): migrate /dashboard/stats route to /dashboard/analyses
- Rename navigation tab from 'Statistiques' to 'Analyses'
- Migrate route from /dashboard/stats to /dashboard/analyses
- Add permanent redirect from old route to new route
- Update navigation component and translation keys
- Fix i18n compliance: replace hardcoded strings with useTranslation hook
- Update all navigation tests to use new route
- Remove backward compatibility stats translation key
- Add analyses page translations (title, description, chart headings)

FBC-31

--- a/src/shared/i18n/messages/fr.json
+++ b/src/shared/i18n/messages/fr.json
@@ -46,7 +46,7 @@
     },
     "navbar": {
       "dashboard": "Dashboard",
-      "stats": "Statistiques",
+      "analyses": "Analyses",
       "activities": "Activités",
       "catalog": "Catalogue",
       "signOut": "Se déconnecter",
@@ -352,6 +352,17 @@
       "cancelAria": "Annuler et retourner à la liste des activités",
       "success": {
         "create": "Activité créée avec succès. Redirection en cours..."
+      }
+    },
+    "analyses": {
+      "title": "Analyses",
+      "pageTitle": "Analyses - Atelier FBC",
+      "description": "Analyse des tendances et anomalies pour les ventes, les activités, et la rentabilité.",
+      "charts": {
+        "salesPerMonth": "Ventes par mois",
+        "activitiesOverTime": "Activités au fil du temps",
+        "marginPerMonth": "Revenu & Marge par mois",
+        "topProducts": "Top Produits par Profit"
       }
     },
     "auth": {
