feat(revenue): implement revenue page with period selection and financial metrics
- Add revenue domain types (RevenuePeriod, RevenueData, RevenueError)
- Implement computeRevenue usecase with material costs and margin calculations
- Create PeriodSelector component (Month, Quarter, Year, Custom periods)
- Create RevenueTable component displaying revenue, costs, and gross margin
- Add useRevenue React Query hook with date-based caching
- Add revenue page at /dashboard/revenus with period state management
- Integrate revenue page in DashboardNavbar navigation
- Add French translations for revenue page and period selector
- Extend date utilities with quarter/year boundaries and date input conversion
- Add formatPercentage utility for margin rate display
- Add comprehensive unit tests (13 test cases) for revenue usecase
- Update planning document with completed sub-tickets 32.1-32.6

Implements FBC-32: Revenue Page MVP

--- a/src/shared/i18n/messages/fr.json
+++ b/src/shared/i18n/messages/fr.json
@@ -47,6 +47,7 @@
     "navbar": {
       "dashboard": "Dashboard",
       "analyses": "Analyses",
+      "revenues": "Revenus",
       "activities": "Activités",
       "catalog": "Catalogue",
       "signOut": "Se déconnecter",
@@ -363,6 +364,32 @@
         "activitiesOverTime": "Activités au fil du temps",
         "marginPerMonth": "Revenu & Marge par mois",
         "topProducts": "Top Produits par Profit"
+      }
+    },
+    "revenue": {
+      "title": "Revenus",
+      "pageTitle": "Revenus - Atelier FBC",
+      "periodSelector": {
+        "label": "Période",
+        "options": {
+          "MONTH": "Mois",
+          "QUARTER": "Trimestre",
+          "YEAR": "Année",
+          "CUSTOM": "Personnalisée"
+        },
+        "customStartDate": "Date de début",
+        "customEndDate": "Date de fin",
+        "dateRangeError": "La date de début doit être antérieure ou égale à la date de fin"
+      },
+      "table": {
+        "caption": "Tableau des revenus",
+        "ariaLabel": "Tableau des revenus pour la période sélectionnée",
+        "sections": {
+          "revenue": "Revenu (Total CA)",
+          "costs": "Coûts (Matériaux)",
+          "grossMargin": "Marge brute"
+        },
+        "grossMarginRate": "Taux de marge brute"
       }
     },
     "auth": {
